[gd_scene load_steps=3 format=3 uid="uid://dkkqbxtmso4yu"]

[ext_resource type="Script" path="res://Scripts/2024.gd" id="1_gyb2y"]
[ext_resource type="Theme" uid="uid://dg2dxep4h3rjx" path="res://UITheme/KenneyUI/kenneyUI.tres" id="2_ib7i5"]

[node name="2024" type="Node2D"]
script = ExtResource("1_gyb2y")
metadata/_edit_vertical_guides_ = [503.0, 1000.0, 1500.0, 97.0, 1897.0]
metadata/_edit_horizontal_guides_ = [252.0, 449.0, 649.0, 847.0]

[node name="January" type="Button" parent="."]
offset_left = 151.0
offset_top = 255.0
offset_right = 457.0
offset_bottom = 442.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
text = "January"

[node name="February" type="Button" parent="."]
offset_left = 607.0
offset_top = 253.0
offset_right = 913.0
offset_bottom = 439.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
text = "February"

[node name="March" type="Button" parent="."]
offset_left = 1093.0
offset_top = 253.0
offset_right = 1399.0
offset_bottom = 439.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
text = "March"

[node name="April" type="Button" parent="."]
offset_left = 1531.0
offset_top = 253.0
offset_right = 1837.0
offset_bottom = 439.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "April"

[node name="May" type="Button" parent="."]
offset_left = 150.0
offset_top = 451.0
offset_right = 456.0
offset_bottom = 638.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "May"

[node name="June" type="Button" parent="."]
offset_left = 607.0
offset_top = 450.0
offset_right = 913.0
offset_bottom = 637.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "June"

[node name="July" type="Button" parent="."]
offset_left = 1093.0
offset_top = 449.0
offset_right = 1399.0
offset_bottom = 636.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "July"

[node name="August" type="Button" parent="."]
offset_left = 1531.0
offset_top = 449.0
offset_right = 1837.0
offset_bottom = 636.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "August"

[node name="September" type="Button" parent="."]
offset_left = 150.0
offset_top = 649.0
offset_right = 456.0
offset_bottom = 836.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "September"

[node name="October" type="Button" parent="."]
offset_left = 606.0
offset_top = 650.0
offset_right = 912.0
offset_bottom = 837.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "October"

[node name="November" type="Button" parent="."]
offset_left = 1093.0
offset_top = 649.0
offset_right = 1399.0
offset_bottom = 836.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "November"

[node name="December" type="Button" parent="."]
offset_left = 1531.0
offset_top = 649.0
offset_right = 1837.0
offset_bottom = 837.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
disabled = true
text = "December"

[node name="Label" type="Label" parent="."]
offset_left = 662.0
offset_top = 115.0
offset_right = 1346.0
offset_bottom = 244.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 64
text = "Select a Month"

[node name="BackButton" type="Button" parent="."]
offset_left = 925.0
offset_top = 925.0
offset_right = 1076.0
offset_bottom = 1007.0
theme = ExtResource("2_ib7i5")
theme_override_font_sizes/font_size = 38
text = "Back"

[connection signal="pressed" from="January" to="." method="_on_january_pressed"]
[connection signal="pressed" from="February" to="." method="_on_february_pressed"]
[connection signal="pressed" from="March" to="." method="_on_march_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
